Change the toast used for the user information about the privacy policy

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -94,9 +94,8 @@
   "passwordsHaveToBeIdentical": "The passwords are different. Please re-type the passwords.",
   "privacyPolicy": "privacy policy",
   "privacyPolicyAcceptance": "By checking thix box, you expressly confirm the acceptance of our {privatePolicyLink}",
-  "privacyPolicyAcceptanceUsingAWindow1": "We use technologies, such as cookies and local storage, and we process personal data, such as IP addresses to personalize content based on your personal data and preference.",
-  "privacyPolicyAcceptanceUsingAWindow2": "It also allows us to measure the performance of the web application.",
-  "privacyPolicyAcceptanceUsingAWindow3": "Click below to consent to the use of this technology and the processing of your personal data for these purposes. You can still access the {privatePolicyLink} in the user menu.",
+  "privacyPolicyAcceptanceUsingAWindow1": "This site uses cookies for analytics only. There are no ads. By continuing to browse this site, you agree to this use.",
+  "privacyPolicyAcceptanceUsingAWindow2": "You can learn more about the {privatePolicyLink} and access it in the user menu at any time.",
   "privacyPolicyMenu": "Privacy policy",
   "privacyTitle": "Privacy Policy for Equipment Maintenance",
   "rebuildInProgress": "Local storage rebuild in progress...",
