--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -135,5 +135,6 @@
   "usagePeriodInHour": "Period in usage hour",
   "userExceedStorageLimit": "User exceeded the storage limit. Remove some images before adding new images.",
   "yearperiod": "{year, plural, one {# year} other {# years}}",
-  "yes": "Yes"
+  "yes": "Yes",
+  "privacyPolicyAcceptanceInLoginModal": "By browsing this website, you accept the {privatePolicyLink}."
 }
