--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -136,5 +136,12 @@
   "usagePeriodInHour": "Period in usage hour",
   "userExceedStorageLimit": "User exceeded the storage limit. Remove some images before adding new images.",
   "yearperiod": "{year, plural, one {# year} other {# years}}",
-  "yes": "Yes"
+  "yes": "Yes",
+  "deleteUserConfirmationMessage1": "All the data you input in Equipment Maintenance website will be deleted. It includes your asset, equipments, tasks, and entries and all the images you might have uploaded. ",
+  "deleteUserConfirmationMessage2": "After the deletion, you will be logged out from Equipment Maintenance and you won't be able to reconnect.",
+  "deleteUserConfirmationMessage3": "This process cannot be rolled back and is immediate. If you want to keep proceeding, please type yes below:",
+  "deleteUserModalTitle": "Deletion of all the user's data",
+  "deleteUserData": "Delete all the user's data",
+  "deleteUserConfirmationPlaceHolder": "Type yes to confirm the deletion",
+  "offline": "You need to be online to perform this operation"
 }
