--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -136,5 +136,12 @@
   "usagePeriodInHour": "Période en heure à l'usage",
   "userExceedStorageLimit": "Vous avez dépassé la limite du stockage qui vous a été attribué. Veuillez supprimer des images avant d'en rajouter.",
   "yearperiod": "{year, plural, one {# année} other {# années}}",
-  "yes": "Oui"
+  "yes": "Oui",
+  "deleteUserConfirmationMessage1": "Toutes les données saisies dans Equipment Maintenance seront supprimées. Cela inclut vos données personnelles (nom, prénom et email), le bien, les équipements, les tâches de maintenance et l'historique ainsi que toutes les images rattachées.",
+  "deleteUserConfirmationMessage2": "Après la suppression, l'utilisateur sera deconnecté du site Equipment Maintenance et vous ne pourrez plus vous reconnecter avec ce compte.",
+  "deleteUserConfirmationMessage3": "Ce traitement est irréversible et immédiat. Si vous souhaitez continuer, tapez oui ci-dessous:",
+  "deleteUserModalTitle": "Suppression de toutes les données de l'utilisateur",
+  "deleteUserData": "Supprimer toutes les données de l'utilisateur",
+  "deleteUserConfirmationPlaceHolder": "Taper oui pour confirmer la suppression",
+  "offline": "You need to be online to perform this operation"
 }
