Change a french translation

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -92,7 +92,7 @@
   "newPassword": "Nouveau mot de passe",
   "no": "Non",
   "notonline": "Hors ligne",
-  "offline": "You need to be online to perform this operation",
+  "offline": "Vous devez être en ligne pour effectuer cette opération",
   "ok": "OK",
   "online": "En ligne",
   "or": "OU",
