Feat/delete user (#12)
* Improve the style of the privacy policy
* Add a property disabled in the Action button
* Add a new function deleteUser in IUserProxy
* Add a new component DeleteUserModal which basically alerts the user about the consequences of the user deletion action.
* Update the privacy policies with a delete user's data button
* Improve the privacy policy
* Update the privacy policy to indicate about the auto deletion of the personnal data after 365 days

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -33,6 +33,12 @@
   "date": "Date",
   "dayperiod": "{day, plural, one {# day} other {# days}}",
   "delete": "Delete",
+  "deleteUserConfirmationMessage1": "All the data you input in Equipment Maintenance website will be deleted. It includes your asset, equipments, tasks, and entries and all the images you might have uploaded. ",
+  "deleteUserConfirmationMessage2": "After the deletion, you will be logged out from Equipment Maintenance and you won't be able to reconnect.",
+  "deleteUserConfirmationMessage3": "This process cannot be rolled back and is immediate. If you want to keep proceeding, please type yes below:",
+  "deleteUserConfirmationPlaceHolder": "Type yes to confirm the deletion",
+  "deleteUserData": "Delete all the user's data",
+  "deleteUserModalTitle": "Deletion of all the user's data",
   "description": "Description",
   "doneAfterColumHeader": "Done after",
   "edit": "Edit",
@@ -86,6 +92,7 @@
   "newPassword": "New Password",
   "no": "No",
   "notonline": "Offline",
+  "offline": "You need to be online to perform this operation",
   "ok": "OK",
   "online": "Online",
   "or": "OR",
