--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -33,6 +33,12 @@
   "date": "Date",
   "dayperiod": "{day, plural, one {# jour} other {# jours}}",
   "delete": "Supprimer",
+  "deleteUserConfirmationMessage1": "Toutes les données saisies dans Equipment Maintenance seront supprimées. Cela inclut vos données personnelles (nom, prénom et email), le bien, les équipements, les tâches de maintenance et l'historique ainsi que toutes les images rattachées.",
+  "deleteUserConfirmationMessage2": "Après la suppression, l'utilisateur sera deconnecté du site Equipment Maintenance et vous ne pourrez plus vous reconnecter avec ce compte.",
+  "deleteUserConfirmationMessage3": "Ce traitement est irréversible et immédiat. Si vous souhaitez continuer, tapez oui ci-dessous:",
+  "deleteUserConfirmationPlaceHolder": "Taper oui pour confirmer la suppression",
+  "deleteUserData": "Supprimer toutes les données de l'utilisateur",
+  "deleteUserModalTitle": "Suppression de toutes les données de l'utilisateur",
   "description": "Description",
   "doneAfterColumHeader": "Fait après",
   "edit": "Editer",
@@ -86,6 +92,7 @@
   "newPassword": "Nouveau mot de passe",
   "no": "Non",
   "notonline": "Hors ligne",
+  "offline": "Vous devez être en ligne pour effectuer cette opération",
   "ok": "OK",
   "online": "En ligne",
   "or": "OU",
