Add a modal to send an invitation by email to the new owner

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -22,6 +22,7 @@
   "assetName": "Asset name",
   "brand": "Brand",
   "cancel": "Cancel",
+  "changeOwnership": "Change ownership",
   "changePassword": "Change Password",
   "changingPassword": "Changing password ...",
   "close": "Close",
@@ -79,6 +80,8 @@
   "modalImageEditTitle": "Image edition",
   "modalLogintitle": "Login with an existing account",
   "modalResetPasswordTitle": "Change your password",
+  "modalSendInvitationPreambule": "You sold your asset and you want to transfer your asset ownership to the new owner. If you input the new owner email address, we will send an invitation by email to register to Equipment Maintenance. Then, the new owner will own your asset automatically.",
+  "modalSendInvitationtitle": "Send an ownership invitation",
   "modalSignupTitle": "Signup",
   "modalTitle": "Equipment Edition",
   "model": "Model",
@@ -113,6 +116,7 @@
   "resetPassword": "Reset password",
   "retypeNewPassword": "Retype your new Password",
   "save": "Save",
+  "sendInvitation": "Send Invitation",
   "sendVerification": "Resend Check Email",
   "serialPort": "Serial Port",
   "shouldbedone": "Should be done the ",
