--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -22,6 +22,7 @@
   "assetName": "Nom du bien",
   "brand": "Marque",
   "cancel": "Annuler",
+  "changeOwnership": "Changer de propriétaire",
   "changePassword": "Confirmer le changement",
   "changingPassword": "Changement du mot de passe ...",
   "close": "Fermer",
@@ -79,6 +80,8 @@
   "modalImageEditTitle": "Edition d'une image",
   "modalLogintitle": "Login avec un compte existant",
   "modalResetPasswordTitle": "Changement de mot de passe",
+  "modalSendInvitationPreambule": "Vous avez vendu votre bien et vous voulez transférer les information de maintenance concernant ce bien au nouveau propriétaire. Si vous saisissez ci-dessous l'adresse email du nouveau propriétaire, nous enverrons un email l'invitant à s'inscrire. Une fois inscrit, votre bien sera autommatiquement rattaché au nouveau propriétaire et vous ne pourrez plus y accéder.",
+  "modalSendInvitationtitle": "Envoie d'une invitation au nouveau propriétaire",
   "modalSignupTitle": "Signup",
   "modalTitle": "Edition des information de l'équipement",
   "model": "Modèle",
@@ -113,6 +116,7 @@
   "resetPassword": "Mot de passe oublié",
   "retypeNewPassword": "Re-saisir votre nouveau mot de passe",
   "save": "Sauver",
+  "sendInvitation": "Envoyer l'invitation",
   "sendVerification": "Renvoyer la Vérification",
   "serialPort": "Port Série",
   "shouldbedone": "Devrait être fait le ",
