--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -148,5 +148,7 @@
   "usagePeriodInHour": "Period in usage hour",
   "userExceedStorageLimit": "User exceeded the storage limit. Remove some images before adding new images.",
   "yearperiod": "{year, plural, one {# year} other {# years}}",
-  "yes": "Yes"
+  "yes": "Yes",
+  "newOwnerEmail": "The new owner email",
+  "alreadyregistered": "is already registered"
 }
