Feat/transfert ownership (#24)
* Add a modal to send an invitation by email to the new owner
* Position the nav bar on top of the back drop
* Hide some buttons depending on the user's credentials

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -15,6 +15,7 @@
   "ageUrl": "Equipment Age URL",
   "ageUrlToolTip": "Url allowing to get the equipment usage time in hour.",
   "alreadyexisting": "already exist",
+  "alreadyregistered": "is already registered",
   "assetDeleteMsg": "Are you sure you want to delete this asset and all its content (equipments, tasks, entries)?",
   "assetDeleteTitle": "Delete Asset",
   "assetModalCreationTitle": "Asset Creation",
@@ -22,6 +23,7 @@
   "assetName": "Asset name",
   "brand": "Brand",
   "cancel": "Cancel",
+  "changeOwnership": "Change ownership",
   "changePassword": "Change Password",
   "changingPassword": "Changing password ...",
   "close": "Close",
@@ -63,6 +65,7 @@
   "installDateLabel": "Installation Date",
   "installedOn": "installed on ",
   "invalid": "is invalid",
+  "invitationSent": "An email has been sent to the new owner ...",
   "isrequired": "is required",
   "login": "Login",
   "loginWithGoogle": "Sign in with Google",
@@ -79,6 +82,8 @@
   "modalImageEditTitle": "Image edition",
   "modalLogintitle": "Login with an existing account",
   "modalResetPasswordTitle": "Change your password",
+  "modalSendInvitationPreambule": "You sold your asset and you want to transfer your asset ownership to the new owner. If you input the new owner email address, we will send an invitation by email to register to Equipment Maintenance. Then, the new owner will own your asset automatically.",
+  "modalSendInvitationtitle": "Send an ownership invitation",
   "modalSignupTitle": "Signup",
   "modalTitle": "Equipment Edition",
   "model": "Model",
@@ -89,6 +94,7 @@
   "name": "Last Name",
   "nbAction": "{nbAction, plural, =0 {synced} one {# action to sync} other {# actions to sync}}",
   "needVerification": "needs to be checked. Please check your emails.",
+  "newOwnerEmail": "The new owner email",
   "newPassword": "New Password",
   "no": "No",
   "notonline": "Offline",
@@ -113,7 +119,9 @@
   "resetPassword": "Reset password",
   "retypeNewPassword": "Retype your new Password",
   "save": "Save",
+  "sendInvitation": "Send Invitation",
   "sendVerification": "Resend Check Email",
+  "sendingInvitation": "Sending Invitation",
   "serialPort": "Serial Port",
   "shouldbedone": "Should be done the ",
   "shouldbedonein1": "Should be done in ",
