--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -15,6 +15,7 @@
   "ageUrl": "URL pour récupérer l'age de l'équipment",
   "ageUrlToolTip": "Url permettant de mettre à jour le temps d'utilisation de l'équipement.",
   "alreadyexisting": "existe déjà",
+  "alreadyregistered": "est déjà utilisé.",
   "assetDeleteMsg": "Etes-vous sure de vouloir supprimer ce bien et tout son contenu (equipements, taches, et historique)?",
   "assetDeleteTitle": "Suppression d'un bien",
   "assetModalCreationTitle": "Création d'un bien",
@@ -22,6 +23,7 @@
   "assetName": "Nom du bien",
   "brand": "Marque",
   "cancel": "Annuler",
+  "changeOwnership": "Changer de propriétaire",
   "changePassword": "Confirmer le changement",
   "changingPassword": "Changement du mot de passe ...",
   "close": "Fermer",
@@ -63,6 +65,7 @@
   "installDateLabel": "Date d'installation",
   "installedOn": "installé le ",
   "invalid": "est invalide.",
+  "invitationSent": "Un email d'invitation a été envoyé au nouveau propriétaire.",
   "isrequired": "est requis",
   "login": "Login",
   "loginWithGoogle": "Se connecter avec Google",
@@ -79,6 +82,8 @@
   "modalImageEditTitle": "Edition d'une image",
   "modalLogintitle": "Login avec un compte existant",
   "modalResetPasswordTitle": "Changement de mot de passe",
+  "modalSendInvitationPreambule": "Vous avez vendu votre bien et vous voulez transférer les information de maintenance concernant ce bien au nouveau propriétaire. Si vous saisissez ci-dessous l'adresse email du nouveau propriétaire, nous enverrons un email l'invitant à s'inscrire. Une fois inscrit, votre bien sera autommatiquement rattaché au nouveau propriétaire et vous ne pourrez plus y accéder.",
+  "modalSendInvitationtitle": "Envoie d'une invitation au nouveau propriétaire",
   "modalSignupTitle": "Signup",
   "modalTitle": "Edition des information de l'équipement",
   "model": "Modèle",
@@ -89,6 +94,7 @@
   "name": "Nom",
   "nbAction": "{nbAction, plural, =0 {synchronisé} one {# action à synchroniser} other {# actions à synchroniser}}",
   "needVerification": "doit être verifié. Vérifier vos emails.",
+  "newOwnerEmail": "L'email du nouveau propriétaire",
   "newPassword": "Nouveau mot de passe",
   "no": "Non",
   "notonline": "Hors ligne",
@@ -113,7 +119,9 @@
   "resetPassword": "Mot de passe oublié",
   "retypeNewPassword": "Re-saisir votre nouveau mot de passe",
   "save": "Sauver",
+  "sendInvitation": "Envoyer l'invitation",
   "sendVerification": "Renvoyer la Vérification",
+  "sendingInvitation": "Envoyer une invitation",
   "serialPort": "Port Série",
   "shouldbedone": "Devrait être fait le ",
   "shouldbedonein1": "Devrait être fait dans ",
